# prefxpy

./: .gitignore  CHANGELOG.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: PYPI.md  index.html  仕様.md  設計.md
examples/: prefxpy.example.toml
prefxpy/: banner.py  cli.py  config.py  proxy.py
tests/: test_banner.py  test_cli_resolve.py  test_config.py  test_proxy.py
