[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "prefxpy"
version = "0.1.3"
description = "Local dev reverse proxy to reproduce production prefix and forwarded-header behavior."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
license-files = ["LICENSE", "THIRD_PARTY_NOTICES.md"]
authors = [{ name = "kushi" }]
keywords = ["proxy", "reverse-proxy", "subpath", "fastapi", "django", "flask"]
dependencies = [
  "aiohttp>=3.10.0",
  "httpx>=0.27.0",
  "tomli>=2.0.1; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.8.0",
]

[project.scripts]
prefxpy = "prefxpy.cli:main"

[project.urls]
Homepage = "https://github.com/smyrk2031/prefxpy"
Documentation = "https://smyrk2031.github.io/prefxpy/"
Repository = "https://github.com/smyrk2031/prefxpy"
Issues = "https://github.com/smyrk2031/prefxpy/issues"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.hatch.build.targets.sdist]
include = [
  "/LICENSE",
  "/THIRD_PARTY_NOTICES.md",
]

[tool.hatch.build.targets.wheel.force-include]
"LICENSE" = "LICENSE"
"THIRD_PARTY_NOTICES.md" = "THIRD_PARTY_NOTICES.md"
